--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
       <button onclick="goToCart()">🛒 Cart</button>
     </div>
   </div>
-  <div id="cart-items"></div>
+  <div id="cart-container" class="cart-container"></div>
   <div class="total">
     <p>Jami narx: <span id="totalOldPrice">$0.00</span></p>
   </div>
