--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="item">
                 <p><img src="./phone-call 1.svg" alt="phone">+7 (966) 55 88 499</p>
                <div class="cart">
-      <button onclick="goToCart()">🛒 Cart</button>
+      <!-- <button onclick="goToCart()">🛒 Cart</button> -->
     </div>
             </div>
         </div>
