--- a/detail.html
+++ b/detail.html
@@ -27,10 +27,10 @@
 
       <div class="bar">
         <nav>
-          <a href="#">Главная</a>
-          <a href="#">Каталог</a>
-          <a href="#">Оптовая продажа</a>
-          <a href="#">О нас</a>
+          <a href="./index.html">Главная</a>
+          <a href="./index.html">Каталог</a>
+          <a href="./index.html">Оптовая продажа</a>
+          <a href="./index.html">О нас</a>
         </nav>
       </div>
 
